# TaskEktosC

./: 10CycleForExemples.c  11CycleWhile.c  12Array.c  12CycleWhile.c  13Array.c  14ArrayExwmple.c  15Array.c  16Array.c  17Array.c  17ArrayPointer.c  18Matrix.c  19Matrix.c  1HelloWorld.c  1Print.c  1Types.c  20Matrix.c  21Matrix.c  22Matrix.c  23Matrix.c  24Matrix.c  25BytesOperation.c  25Matrix.c  26BitShiftOperations.c  27IfElse.c  28Switch.c  29Switch.c  2Print.c  30Pointers.c  31Pointers.c  32PointerArithmetic.c  33PointerArithmetic.c  35PointerToPointer.c  36Pointers.c  37PointersConst.c  38FunctionPointer.c  38FunctionPointer2.c  38PointersArray.c  39Boolean.c  3Print.c  3Scan.c  (+46 more)
