cmake_minimum_required(VERSION 3.23)
project(TaskEktos C)

set(CMAKE_C_STANDARD 99)

add_executable(TaskEktos main.c)

add_executable(1HelloWorld 1HelloWorld.c)
add_executable(1Print 1Print.c)
add_executable(1Types 1Types.c)
add_executable(3Print 3Print.c)
add_executable(3Scan 3Scan.c)
add_executable(5LogicalOperators 5LogicalOperators.c)
add_executable(6LogicalOperators 6LogicalOperators.c)
add_executable(7LogicOp 7LogicOp.c)
add_executable(8CycleForExemples 8CycleForExemples.c)
add_executable(8CycleFor 8CycleFor.c)
add_executable(9CycleForExemples 9CycleForExemples.c)
add_executable(10CycleForExemples 10CycleForExemples.c 71VoidPointer.c)
add_executable(11CycleWhile 11CycleWhile.c)
add_executable(13Array 13Array.c)
add_executable(14ArrayExwmple 14ArrayExwmple.c)
add_executable(15Array 15Array.c)
add_executable(17Array 17Array.c)
add_executable(18Matrix 18Matrix.c)
add_executable(19Matrix 19Matrix.c)
add_executable(20Matrix 20Matrix.c)
add_executable(21Matrix 21Matrix.c)
add_executable(22Matrix 22Matrix.c)



add_executable(23Matrix 23Matrix.c)
add_executable(24Matrix 24Matrix.c)

add_executable(25BytesOperation 25BytesOperation.c)
add_executable(26BitShiftOperations 26BitShiftOperations.c)
add_executable(27IfElse 27IfElse.c)
add_executable(28Switch 28Switch.c)
add_executable(29Switch 29Switch.c)
add_executable(30Pointers 30Pointers.c)
add_executable(31Pointers 31Pointers.c)
add_executable(32PointerArithmetic 32PointerArithmetic.c)
add_executable(33PointerArithmetic 33PointerArithmetic.c)
add_executable(35PointerToPointer 35PointerToPointer.c)
add_executable(36Pointers 36Pointers.c)
add_executable(3836PointersConst 37PointersConst.c)
add_executable(38PointersArray 38PointersArray.c)

add_executable(25Matrix 25Matrix.c)
add_executable(39Boolean 39Boolean.c)
add_executable(40Boolean 40Boolean.c)
add_executable(12CycleWhile 12CycleWhile.c)
add_executable(41Function 41Function.c)
add_executable(42Function 42Function.c)

add_executable(43Function 43Function.c)
add_executable(44Function 44Function.c)
add_executable(45Function 45Function.c)
add_executable(46Function 46Function.c)
add_executable(47FunctionArray 47FunctionArray.c)
add_executable(48Structure 48Structure.c)
add_executable(50PointersStructure 50PointersStructure.c)
add_executable(51Structure 51Structure.c)
add_executable(53Union 53Union.c)
add_executable(52Union 52Union.c)
add_executable(54BytesFilds 54BytesFilds.c)
add_executable(55BytesFilds 55BytesFilds.c)
add_executable(56TextFile 56TextFile.c)
add_executable(58TextFile 58TextFile.c)
add_executable(59BinFile 59BinFile.c)
add_executable(60String 60String.c)
add_executable(String61 61String.c)
add_executable(61StringFunction 61StringFunction.c)
add_executable(String62 62String.c)
add_executable(63String 63String.c)
add_executable(66Macros 66Macros.c)
add_executable(64String 64String.c)
add_executable(67MemoryManagement 67MemoryManagement.c)
add_executable(68MemoryManagement 68MemoryManagement.c)
add_executable(Mat Mat.c)

add_executable(38FunctionPointer 38FunctionPointer.c)
add_executable(38FunctionPointer2 38FunctionPointer2.c)

add_executable(69Enum 69Enum.c)
add_executable(69Enum2 69Enum2.c)
add_executable(TernaryOperator TernaryOperator.c)

add_executable(70Date 70Date.c)
add_executable(2Print 2Print.c)
add_executable(71VoidPointer 71VoidPointer.c)
add_executable(72VoidPointerFunction 72VoidPointerFunction.c)